<resources>
    <string name="app_name">Dragon Age Personnage</string>
    <string name="create_character">Créer un Personnage</string>
    <string name="logo">Logo Dragon Age</string>

    <string name="choose_race">Choix de la Race</string>
    <string name="description">Description</string>
    <string name="speed">Rapidité</string>
    <string name="speed_explain">La Rapidité mesure l’allure et la vitesse à pied. Votre personnage peut se déplacer d’un nombre de mètres égal à sa Rapidité quand il effectue l’action se déplacer.</string>
    <string name="speed_race">Rapidité d\'un %2s = %2s + %2s</string>
    <string name="classe_available">Classes Possible</string>
    <string name="next_to_classe">Continuer vers le choix de la Classe</string>

    <string name="choose_classe">Choix de la Classe</string>
    <string name="health">Santé de départ</string>
    <string name="health_explain">La Santé mesure la bonne forme physique de votre personnage. Le choix de la classe détermine la Santé de départ.</string>
    <string name="health_classe">Santé = %2s + %2s + 1d6.</string>
    <string name="weapon_groups">Groupes d\'Armes</string>
    <string name="weapon_group_explain">Votre classe détermine les armes que votre personnage sait utiliser. Les armes sont divisées en groupes et cette entrée vous précise à l’utilisation desquelles votre personnage est formé.</string>
    <string name="primary_attributes">Attributs Principaux</string>
    <string name="primay_attributes_explain">Chaque classe possède trois attributs principaux. Ce sont les attributs les plus importants pour cette classe et ceux qu’elle utilise le plus fréquemment.</string>
    <string name="secondary_attributes">Attributs Secondaires</string>
    <string name="secondary_attributes_explain">Chaque classe a cinq attributs secondaires. Ces attributs ne sont pas aussi importants que les attributs principaux, mais tous peuvent être utiles dans les circonstances adéquates.</string>
    <string name="next_to_background">Continuer vers le choix de l\'Historique</string>

    <string name="choose_background">Choix de l\'Historique</string>
    <string name="attribute_bonus">Attribut Bonus</string>
    <string name="attribute_bonus_explain">Augmentez votre attribut %2s de 1.</string>
    <string name="choose_focus">Choix de Compétence</string>
    <string name="choose_focus_explain">Vous avez le choix entre l’une des compétences suivantes :</string>
    <string name="spoken_languages">Langues Parlées</string>
    <string name="writen_language">Langues Ecrites</string>
    <string name="avantage_explain">Vous obtenez 3 améliorations. Vous pouvez acheter l\'une des augmentations d\'attribut de la table de votre historique pour 2 améliorations, ou bien n\'importe quel autre avantage décrit pour 1 amélioration chacun.</string>
    <string name="cost">Coût</string>
    <string name="avantage">Avantage</string>
    <string name="focus">Compétence :</string>
    <string name="spoken_language">Langue Parlée :</string>
    <string name="weapon_group">Groupe d\'Arme :</string>
    <string name="choose_a_benefit">Veuillez choisir des avantages !</string>
    <string name="empty_avantage_point">Vous avez dépensé tout vos améliorations !</string>
    <string name="next_to_focus">Continuer vers le choix de Compétence</string>

    <string name="choose_focus_background">Grâce à l\'Historique %2s vous pouvez choisir l’une des compétences suivantes :</string>
    <string name="choose_a_focus">Veuillez choisir une compétence !</string>

    <string name="rule">Règle</string>

    <string name="roll_attributes">Lancer des Attributs</string>
    <string name="roll_attributes_rule">Pour déterminer vos attributs de départ, vous allez lancer les dés. Vous aurez besoin de trois dés à six faces (3d6). Lancez-les tous les trois et additionnez-les pour obtenir un résultat. Vous devez faire huit de ces jets en tout.</string>
    <string name="value">Valeur</string>
    <string name="roll_count">Lancer à faire :</string>
    <string name="next_to_assign">Continer vers l\'Assignation des Attributs</string>

    <string name="assign_attributes">Assigner les Attributs</string>
    <string name="assign_attributes_rule">Veuillez séléctionner les attributs pour leur ajouter les valeurs des dés précedement obtenu.</string>
    <string name="next_to_spell">Continuer vers les Sorts</string>
    <string name="next_to_talent">Continuer vers les Talents</string>
    <string name="next_to_group_weapon">Continuer vers les Groupes d\'Armes</string>

    <string name="empty">Aucune</string>
    <string name="title_activity_sheet_menu">SheetMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
