<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.create.ChooseClasseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/custom_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_classe"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center" />

            <Spinner
                android:id="@+id/choose_classe_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:scrollbars="none"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/description"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="16dp" />

                <com.bluejamesbond.text.DocumentView
                    android:id="@+id/choose_classe_description_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:background="@drawable/custom_border">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="16dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/health" />

                        <TextView
                            android:id="@+id/choose_classe_health_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginTop="12dp"
                            android:layout_gravity="center"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/weapon_group" />

                        <TextView
                            android:id="@+id/choose_classe_weapon_group_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:textSize="20sp"
                            android:textColor="@color/colorPrimaryDark"
                            />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/choose_classe_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/choose_classe_btn_background_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/next_to_background" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

