<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="false"
    android:scrollbars="none"
    android:padding="16dp"
    tools:context=".controller.create.RollAttributesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/custom_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/SpinnerTitle"
                android:text="@string/roll_attributes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:theme="@style/Title"
                android:text="@string/rule" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_line"/>_

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/roll_attributes_rule"
                android:justificationMode="inter_word" />

            <TableLayout
                android:id="@+id/roll_attribute_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:orientation="vertical"
            android:background="@drawable/custom_border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:theme="@style/SpinnerTitle"
                    android:text="@string/result_bonus"/>


                <TextView
                    android:id="@+id/roll_attribute_result_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:theme="@style/Title"
                    android:textSize="70sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:background="@drawable/custom_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/roll_attribute_dice_1_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:id="@+id/roll_attribute_dice_2_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:id="@+id/roll_attribute_dice_3_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/roll_attribute_roll_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:onClick="rollDiceForAttributes"
                android:text="@string/roll_dice"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/roll_attribute_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="@drawable/custom_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:theme="@style/Title"
                android:text="@string/value" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_line"></LinearLayout>

            <TextView
                android:id="@+id/roll_attribute_roll_numbers_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:theme="@style/Value" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:onClick="assignAttributeActivity"
            android:text="@string/next_to_assign"
            />

    </LinearLayout>

</ScrollView>
